# spiritoffire

./: .gitignore  pyproject.toml
lib/app/: __init__.py
lib/core/: mongo_database.py
src/models/: subscription.py
src/spiritoffire/adapters/: __init__.py  publication_adapter.py  subscription_adapter.py
src/spiritoffire/core/: mongo_database.py  queue_manager.py
src/spiritoffire/models/: __init__.py  consumer.py  producer.py  publication.py  queue_data.py  subscription.py
src/spiritoffire/workers/: __init__.py  stop_item.py
tests/: test_database_adapter.py  test_mongo_database.py  test_queue_manager.py
