[project]
name = "spiritoffire"
version = "0.3.2"
description = "Library for common Python scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "pytest",
    "pymongo"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/spiritoffire"
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""